[build-system]
requires = [
  "Cython",
  "setuptools",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "jt-Pyrvo23d"
version = "0.1.2"
description = "Wheels for the Pyrvo23d wrapper by mtrmel"
authors = [{ name="Jonathan Tinoco", email="aplicacionesdejon@gmail.com" }]
license = { text = "MIT" }
dynamic = ["classifiers"]