[build-system]
requires = [
  "Cython",
  "setuptools",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "jt-Pyrvo23d" # name only provided to left the original available in case official Pyrvo23d wheels are released 
version = "0.1.6"
description = "Wheels for the Pyrvo23d wrapper by mtrmel"
mantainers = [{ name="Jonathan Tinoco", email="aplicacionesdejon@gmail.com" }]
readme = "README"
authors = [{ name = "Jur van den Berg"},
          { name = "Stephen J. Guy"},
          { name = "Jamie Snape"},
          { name = "Ming C. Lin"},
          { name = "Dinesh Manocha"},
]
# license = { text = "Apache-2.0" }
license = {file = "LICENSE"}
dynamic = ["classifiers"]